[package]
name = "rust-of-rods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.19.0"
chrono = "0.4.26"
colored = "2.0.4"
reqwest = {version = "0.11.18", features = ["json"] }
futures = "0.3.28"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
serde_repr = "0.1.16"
serde-big-array = "0.5.1"
tokio = {version = "1.31.0", features = ["full"] }
tokio-stream = "0.1.1"
bincode = "1.3.3"
